renamed:    public/js/apiRouter.js -> apiRouter.js 	modified:   public/html/index.html 	modified:   public/js/script.js

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -29,11 +29,11 @@
                     <form id="user_data" class="data_container">
                         <h2>Заполните информацию о себе</h2>
                         <div class="client_data">
-                            <label for="first-name">Ім'я</label>
+                            <label for="name">Ім'я</label>
                             <input type="text" id="name" name="name" required>
                         </div>
                         <div class="client_data">
-                            <label for="last-name">Фамілія *</label>
+                            <label for="surname">Фамілія *</label>
                             <input type="text" id="surname" name="surname" required>
                         </div>
                         <div class="client_data">
@@ -73,7 +73,7 @@
                     
                     <div class="dropdown_block">
                         <label for="dropdown_master">Майстер:</label>
-                        <select name="dropdown_master" id="mastersSelect">
+                        <select name="dropdown_master" id="dropdown_master">
                             <option value="Masster">Послуга</option>
                             <!-- Мастера будут загружены с сервера -->
                         </select>
