modified:   apiRouter.js 	new file:   dist/apiRouter.dev.js 	modified:   public/css/style.css 	modified:   public/html/index.html 	modified:   public/js/calendar.js 	modified:   public/js/dist/calendar.dev.js 	new file:   public/js/dist/script.dev.js 	modified:   public/js/script.js

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -72,8 +72,8 @@
                 <form id="bookingForm"class="masterVSservice">
                     
                     <div class="dropdown_block">
-                        <label for="master">Майстер:</label>
-                        <select name="master" id="master">
+                        <label for="Master">Майстер:</label>
+                        <select name="Master" id="Master">
                             <option value="Master">Послуга</option>
                             <!-- Мастера будут загружены с сервера -->
                         </select>
@@ -122,7 +122,7 @@
                 <button id="backBtn" type="button">Назад</button>
             </div>
             <div class="form-actions">
-                <button id="nextBtn" type="button" onclick="submitForm()">Далі</button>
+                <button id="nextBtn" type="button" >Далі</button>
             </div>
         </div>
     </div>
