modified:   apiRouter.js 	modified:   dist/apiRouter.dev.js 	modified:   public/html/index.html 	modified:   public/js/dist/script.dev.js 	modified:   public/js/script.js

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -72,8 +72,8 @@
                 <form id="bookingForm"class="masterVSservice">
                     
                     <div class="dropdown_block">
-                        <label for="Master">Майстер:</label>
-                        <select name="Master" id="Master">
+                        <label for="Masters">Майстер:</label>
+                        <select name="Masters" id="Masters">
                             <option value="Master">Послуга</option>
                             <!-- Мастера будут загружены с сервера -->
                         </select>
