--- a/public/admin/adminIndex.html
+++ b/public/admin/adminIndex.html
@@ -69,9 +69,9 @@
                             <a href="element.html" class="dropdown-item">Other Elements</a>
                         </div>
                     </div>
-                    <a href="masters.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Masters</a>
-                    <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Forms</a>
-                    <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>
+                    <a href="masters.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Майстри</a>
+                    <a href="users.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Користувачі</a>
+                    <a href="services.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Послуги</a>
                     <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Charts</a>
                     <a href="masters.html" class="nav-item nav-link">Masters</a>
                     <div class="nav-item dropdown">
